--- a/src/main/webapp/resources/css/wt.css
+++ b/src/main/webapp/resources/css/wt.css
@@ -79,7 +79,7 @@ input[type= text] {
     /* 첫 구현보다 약간 넓게 */
     min-height: 100px;
     /* 세로 크기 크게 증가 */
-    padding: 30px;
+    padding: 20px;
     border-radius: 10px;
     position: absolute;
     top: 50%;
@@ -89,13 +89,20 @@ input[type= text] {
     display: flex;
     justify-content: center;
     align-items: center;
-
+    box-sizing: border-box;
 
 }
 #addmodule_context form {
     display: flex;
+    justify-content: center;
     flex-direction: column;
     align-items: center;
+    vertical-align: center;
+    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+    margin: 0; /* 중요 */
+    padding: 0; /* 혹시 몰라서 */
 }
 
 .form-row {
@@ -108,7 +115,7 @@ input[type= text] {
 .form-row span {
     display: inline-block;
     width: 100px;
-    text-align: right;
+    text-align: left;
     margin-right: 10px;
 }
 
