--- a/src/main/webapp/resources/css/login.css
+++ b/src/main/webapp/resources/css/login.css
@@ -2,6 +2,7 @@
 #loginForm {
     display: flex;
     flex-direction: column;
+    width: 300px;
     border: 5px solid cornflowerblue;
     border-radius: 10px;
     padding: 15px;
