--- a/src/main/webapp/resources/css/top.css
+++ b/src/main/webapp/resources/css/top.css
@@ -1,8 +1,12 @@
 #headerTitle h3 {
     font-size: 35px;
     text-align: center;
+}
+#headerTitle h3 a{
     text-decoration: none;
+    font-size: 30px;
     color: black;
+    margin: 10px;
 }
 
 .tourMenu {
@@ -23,6 +27,7 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
+    align-items: center;
 }
 hr {
     width: 100%;
